PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jun 2010, PHP 5.2.14
- Fixed bug #52061 (memory_limit above 2G). (Felipe)
- Fixed bug #52010 (open_basedir restrictions mismatch on vacuum command).
  (Ilia, Felipe)

17 Jun 2010, PHP 5.2.14RC1
- Upgraded bundled PCRE to version 8.02. (Ilia)

- Reverted bug fix #49521 (PDO fetchObject sets values before calling
  constructor). (Felipe)

- Updated timezone database to version 2010.5. (Derick)

- Fixed a possible stack exaustion inside fnmatch(). Reporeted by Stefan
  Esser (Ilia)
- Reset error state in PDO::beginTransaction() reset error state. (Ilia)
- Fixed a NULL pointer dereference when processing invalid XML-RPC
  requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)
- Fixed handling of session variable serialization on certain prefix
  characters. Reported by Stefan Esser (Ilia)
- Fixed a possible arbitrary memory access inside sqlite extension. Reported
  by Mateusz Kocielski. (Ilia)  
- Fixed a crash when calling an inexistent method of a class that inherits 
  PDOStatement if instantiated directly instead of doing by the PDO methods.
  (Felipe)

- Fixed bug #52041 (Memory leak when writing on uninitialized variable returned
  from function). (Dmitry)
- Fixed bug #52019 (make lcov doesn't support TESTS variable anymore). (Patrick)
- Fixed bug #51911 (ReflectionParameter::getDefaultValue() memory leaks with
  constant array). (Felipe)
- Fixed bug #51905 (ReflectionParameter fails if default value is an array
  with an access to self::). (Felipe)
- Fixed bug #51822 (Segfault with strange __destruct() for static class
  variables). (Dmitry)
- Fixed bug #51671 (imagefill does not work correctly for small images).
  (Pierre)
- Fixed bug #51670 (getColumnMeta causes segfault when re-executing query
  after calling nextRowset). (Pierrick)